--- a/html_orig/sass/layout/_modal.scss
+++ b/html_orig/sass/layout/_modal.scss
@@ -25,8 +25,8 @@
 	//min-height: 15rem;
 
 	background: #1c1c1e;
-	border-left: 6px solid $c-form-highlight-a;
-	border-right: 6px solid $c-form-highlight-a;
+	border-left: 6px solid $c-form-highlight;
+	border-right: 6px solid $c-form-highlight;
 	box-shadow: 0 0 2px 0 #434349, 0 0 6px 0 black;
 
 	border-radius: 6px;
@@ -40,7 +40,6 @@
 	}
 }
 
-/*
 // "toast"
 .NotifyMsg {
 	position: fixed;
@@ -75,4 +74,3 @@
 	&.visible { opacity: 1 }
 	&.hidden { display: none }
 }
-*/
