--- a/html_orig/sass/pages/_wifi.scss
+++ b/html_orig/sass/pages/_wifi.scss
@@ -43,6 +43,50 @@
 	@extend %form-row-spacing;
 }
 
+%ap-inner {
+	cursor: pointer;
+	@include noselect;
+
+	position: relative;
+	&:active {
+		left: 0;
+		top: 1px;
+	}
+
+	border-radius: 3px;
+	color: #222;
+
+	background: #afafaf;
+	transition: background-color 0.5s;
+	&:hover { background: white }
+
+	display: flex;
+
+	.rssi {
+		min-width: 2.5rem;
+		flex: 0 0 15%;
+		text-align: right;
+
+		&:after {
+			padding-left: dist(-5);
+			content: '%';
+			font-size: fsize(-1);
+		}
+	}
+
+	.essid {
+		flex: 1 1 70%;
+		min-width: 0;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		font-weight: bold;
+	}
+
+	.auth {
+		flex: 0 0 15%;
+	}
+}
+
 .AP {
 	// can't use margins inside a column
 
@@ -56,53 +100,70 @@
 		top: 0 !important; // no click effect
 	}
 
-	// the actual silver box
 	.inner {
-		cursor: pointer;
-		@include noselect;
-
-		position: relative;
-		&:active {
-			left: 0;
-			top: 1px;
-		}
-
-		border-radius: 3px;
-		color: #222;
-
-		background: #afafaf;
-		transition: background-color 0.5s;
-		&:hover { background: white }
-
-		display: flex;
+		@extend %ap-inner;
 
 		& > * {
 			padding: dist(-1);
 			@include nowrap;
 		}
+	}
+}
 
-		.rssi {
-			min-width: 2.5rem;
-			flex: 0 0 15%;
-			text-align: right;
+.AP-preview {
+	.wrap {
+		@extend %ap-inner;
 
-			&:after {
-				padding-left: dist(-5);
-				content: '%';
-				font-size: fsize(-1);
+		flex-direction: row;
+		background: #eee !important; // override the hover effect #43de81
+		cursor: default;
+		top: 0 !important; // no click effect
+		overflow: hidden;
+
+		.inner {
+			display: flex;
+			flex-direction: column;
+
+			& > * {
+				padding: dist(-1);
+				@include nowrap;
+			}
+		}
+		.forget {
+			align-self: stretch;
+			line-height: 100%;
+			padding: dist(-1);
+			border-left: 1px solid  #bbb;
+			display: flex;
+			align-items: center;
+
+			&, &:hover {
+				color: black;
+				text-decoration: none;
+			}
+
+			font-size: 28px;
+
+			&:hover {
+				background: #dc4a6a;
+				color: white;
+				border-left: 1px solid  #666;
+				border-bottom-right-radius: 3px;
+				border-top-right-radius: 3px;
+			}
+
+			&:active {
+				position: relative;
+				padding-top: calc(#{dist(-1)} + 1px);
 			}
 		}
 
-		.essid {
-			flex: 1 1 70%;
-			min-width: 0;
-			text-overflow: ellipsis;
-			overflow: hidden;
-			font-weight: bold;
+		.essid, .passwd {
+			padding-bottom: 0;
 		}
 
-		.auth {
-			flex: 0 0 15%;
+		.passwd {
+			font-family: monospace;
 		}
 	}
 }
