--- a/html_orig/sass/layout/_box.scss
+++ b/html_orig/sass/layout/_box.scss
@@ -80,8 +80,18 @@
 			display: none;
 		}
 
-		&.expanded .Row {
-			display: flex;
+		#ap-box {
+			display: none;
+		}
+
+		&.expanded {
+			.Row {
+				display: flex;
+			}
+
+			#ap-box {
+				display: block;
+			}
 		}
 	}
 }
