--- a/html_orig/css/app.css
+++ b/html_orig/css/app.css
@@ -343,6 +343,10 @@ a:hover {
 [onclick] {
   cursor: pointer; }
 
+ul > * {
+  padding-top: .2em;
+  padding-bottom: .2em; }
+
 /* Main outer container */
 #outer {
   display: flex;
